--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
             <h2>Installation Methods</h2>
             <div class="installation-grid">
                 <p>
-                    <b>Via npm (recommended):</b><br>
+                    <b>Via npm:</b><br>
                     <code class="c-green">npm install -g @fresh-editor/fresh-editor</code>
                 </p>
                 <p>
-                    <b>Via npx (for a quick test):</b><br>
+                    <b>Via npx:</b><br>
                     <code class="c-green">npx @fresh-editor/fresh-editor</code>
                 </p>
                 <p>
