--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                     <li>Standard keybindings (Ctrl+S, Ctrl+Z, Ctrl+F)</li>
                     <li>Full mouse support with selections</li>
                     <li>Menu bar and command palette</li>
-                    <li>Built-in file explorer</li>
+                    <li>Built-in file explorer and terminal</li>
                 </ul>
             </div>
             <div class="feature-visual">
@@ -966,7 +966,7 @@
             </div>
             <div class="feature-card">
                 <h3>Views & Layout</h3>
-                <p>Split panes, line numbers, word wrap, custom backgrounds, and built-in markdown preview.</p>
+                <p>Split panes, line numbers, word wrap, custom backgrounds, built-in markdown preview, and embedded terminal.</p>
             </div>
             <div class="feature-card">
                 <h3>Productivity</h3>
