--- a/index.html
+++ b/index.html
@@ -1035,15 +1035,15 @@
 
                 <div class="install-card">
                     <h3>Debian / Ubuntu</h3>
+                    <p class="install-card-note">
+                        <a href="https://github.com/sinelaw/fresh/releases" target="_blank">Download .deb from releases</a>
+                    </p>
                     <div class="copyable">
                         <code id="cmd-deb">sudo dpkg -i fresh-editor_*.deb</code>
                         <button class="copy-btn" onclick="copyCode('cmd-deb', this)">
                             <img src="docs/copy-icon.svg" alt="Copy">
                         </button>
                     </div>
-                    <p class="install-card-note">
-                        <a href="https://github.com/sinelaw/fresh/releases" target="_blank">Download .deb from releases</a>
-                    </p>
                 </div>
 
                 <div class="install-card">
@@ -1117,9 +1117,10 @@
     <footer>
         <div class="footer-links">
             <a href="https://github.com/sinelaw/fresh" target="_blank">GitHub</a>
-            <a href="https://github.com/sinelaw/fresh/wiki" target="_blank">Documentation</a>
+            <a href="https://github.com/sinelaw/fresh/blob/master/docs/USER_GUIDE.md" target="_blank">Documentation</a>
             <a href="https://github.com/sinelaw/fresh/releases" target="_blank">Releases</a>
             <a href="https://github.com/sinelaw/fresh/issues" target="_blank">Issues</a>
+            <a href="https://github.com/sinelaw/fresh/discussions" target="_blank">Discussions</a>
         </div>
         <p class="footer-credit">
             Created by Noam Lewis
